--- a/OpenGL_Test/OpenGL_Test.vcxproj
+++ b/OpenGL_Test/OpenGL_Test.vcxproj
@@ -160,6 +160,8 @@
     <ClCompile Include="Colours.cpp" />
     <ClCompile Include="Coordinate_Systems.cpp" />
     <ClCompile Include="Coordinate_Systems_Multiple.cpp" />
+    <ClCompile Include="LightingMaps_diffuse.cpp" />
+    <ClCompile Include="LightingMaps_Specular.cpp" />
     <ClCompile Include="Materials.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Textures.cpp" />
@@ -182,6 +184,10 @@
     <None Include="Colours.vert" />
     <None Include="Coordinate_System.frag" />
     <None Include="Coordinate_System.vert" />
+    <None Include="LightingMaps.frag" />
+    <None Include="LightingMaps.vert" />
+    <None Include="LightingMaps2.frag" />
+    <None Include="LightingMaps2.vert" />
     <None Include="Light_Cube.frag" />
     <None Include="Light_Cube.vert" />
     <None Include="Materials.frag" />
