Added in basic console accessor without pausing while loop. Added FPS counter command
- You can now access the console by pressing the ~ key.
-You can now get the current fps by typing fps into the console (NOTE: this command is not case bound and no commands will be unless necessary).

--- a/OpenGL_Test/OpenGL_Test.vcxproj
+++ b/OpenGL_Test/OpenGL_Test.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Camera_Class.cpp" />
     <ClCompile Include="Camera_Keyboard.cpp" />
     <ClCompile Include="Colours.cpp" />
+    <ClCompile Include="ConsoleController.cpp" />
     <ClCompile Include="Coordinate_Systems.cpp" />
     <ClCompile Include="Coordinate_Systems_Multiple.cpp" />
     <ClCompile Include="FileReader.cpp" />
@@ -178,6 +179,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="ConsoleController.h" />
     <ClInclude Include="FileReader.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="Mesh.h" />
